# type-graphql-demo

./: .gitignore  Cargo.toml  package-lock.json  package.json  services.yaml  tsconfig.json
app/: main.ts
app/db/: mariadb.ts
app/models/: Resaurant.ts
app/subs/: restaurant.ts  restaurantRs.ts  subServer.ts
app/utils/: async.ts  buildFedSchema.ts
src/: federation.ts  main.rs  main.ts
src/db/: pool.rs
src/graphql/: schema_func.ts  schema_input.ts  schema_resolver.ts  schema_type.ts
src/models/: books.rs  mod.rs  simple_broker.rs
src/subs/: restaurant.ts  restaurantRs.ts  subServer.ts
