[package]
name = "type-graphql-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "4.0"
async-graphql-actix-web = "4.0"
tokio = { version = "1.21.2", features = ["full"] }
serde_json = "1.0.87"