[package]
name = "type-graphql-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "4.0"
async-graphql-actix-web = "4.0"
tokio = { version = "1.21.2", features = ["full"] }
serde_json = "1.0.87"
actix-web = { version = "4.2.1", default-features = false, features = ["macros"] }
slab = "0.4.7"
futures-util = "0.3.25"
futures-channel = "0.3.25"
once_cell = "1.0"
futures-timer = "3.0.2"
async-stream = "0.3.3"